Fix overflow object not hidden bug - Move the object 'base-view' out of view area to point(-0xffff,-0xffff)

--- a/sources/css/index.css
+++ b/sources/css/index.css
@@ -74,6 +74,8 @@ section.page-viewpoint {
 	height: 297mm;
 	visibility: hidden;
 	position: absolute;
+	top: -65535px;
+	left: -65535px;
 }
 .page-view {
 	margin-top: 15px;
